Добавил panini. Деактивировал CssBlocks

--- a/src/assets/scss/style.scss
+++ b/src/assets/scss/style.scss
@@ -6,20 +6,17 @@
     box-sizing: border-box;
 }
 
+* {
+    margin: 0;
+}
+
 body {
     font-family: 'Roboto', sans-serif;
     font-size: 15px;
 }
 
-.title {
-    margin: 0 auto;
-    padding: 15px 20px;
 
-    background-color: $accent-color;
-    color: $white-text;
-    transition: background-color .2s ease-in-out;
 
-    &:hover {
-        background-color: darken($accent-color, 5%);
-    }
-}
+// blocks
+@import 'blocks/header.scss';
+@import 'blocks/content.scss';
